2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>95</length>
    <type>Text</type>
</CustomField>