2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Agent_Details__c.field-meta.xml
<CustomField>
    <fullName>Agent_Details__c</fullName>
    <label>Agent Details</label>
    <type>TextArea</type>
</CustomField>