2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Air_Con__c.field-meta.xml
<CustomField>
    <fullName>Air_Con__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air-Con</label>
    <type>Checkbox</type>
</CustomField>