2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Air_con_Destination2__c.field-meta.xml
<CustomField>
    <fullName>Air_con_Destination2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air-con (Destination)</label>
    <type>Checkbox</type>
</CustomField>