2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Aircase_Triwall_Residence__c.field-meta.xml
<CustomField>
    <fullName>Aircase_Triwall_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aircase/Triwall (Residence)</label>
    <type>Checkbox</type>
</CustomField>