2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Arrival_at_Client_s_Res__c.field-meta.xml
<CustomField>
    <fullName>Arrival_at_Client_s_Res__c</fullName>
    <label>Arrival at Client&apos;s Res.</label>
    <type>Date</type>
</CustomField>