2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>