2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Art_Crew__c.field-meta.xml
<CustomField>
    <fullName>Art_Crew__c</fullName>
    <label>Art Crew</label>
    <type>TextArea</type>
</CustomField>