2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Instructions__c</fullName>
    <label>Billing Instructions</label>
    <length>80</length>
    <type>Text</type>
</CustomField>