2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Book_shipment_to_arrive_on__c.field-meta.xml
<CustomField>
    <fullName>Book_shipment_to_arrive_on__c</fullName>
    <label>Book shipment to arrive on</label>
    <type>Date</type>
</CustomField>