2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/C_D_Attn__c.field-meta.xml
<CustomField>
    <fullName>C_D_Attn__c</fullName>
    <label>Contact at Destination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>