2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/C_D_Tel__c.field-meta.xml
<CustomField>
    <fullName>C_D_Tel__c</fullName>
    <label>C/D Tel</label>
    <type>Phone</type>
</CustomField>