2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Cleaning_Service__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Service__c</fullName>
    <label>Cleaning Service</label>
    <type>DateTime</type>
</CustomField>