2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Cleaning_ServiceB__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_ServiceB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleaning Service</label>
    <type>Checkbox</type>
</CustomField>