2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Collection_Details__c.field-meta.xml
<CustomField>
    <fullName>Collection_Details__c</fullName>
    <label>Collection Address</label>
    <type>TextArea</type>
</CustomField>