2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Colour_Stickers__c.field-meta.xml
<CustomField>
    <fullName>Colour_Stickers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colour Stickers</label>
    <type>Checkbox</type>
</CustomField>