2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Colour_Stickers_New__c.field-meta.xml
<CustomField>
    <fullName>Colour_Stickers_New__c</fullName>
    <label>Colour Stickers New</label>
    <length>30</length>
    <type>Text</type>
</CustomField>