2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Contact_New__c.field-meta.xml
<CustomField>
    <fullName>Contact_New__c</fullName>
    <label>Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>