2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/ContactText__c.field-meta.xml
<CustomField>
    <fullName>ContactText__c</fullName>
    <label>Contact</label>
    <length>45</length>
    <type>Text</type>
</CustomField>