2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Container_20__c.field-meta.xml
<CustomField>
    <fullName>Container_20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>20&apos; Container</label>
    <type>Checkbox</type>
</CustomField>