2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Container_Dri__c.field-meta.xml
<CustomField>
    <fullName>Container_Dri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container Dri</label>
    <type>Checkbox</type>
</CustomField>