2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Container_No__c.field-meta.xml
<CustomField>
    <fullName>Container_No__c</fullName>
    <description>only for IB Work Order</description>
    <label>Container No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>