2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Crates_measured_date__c.field-meta.xml
<CustomField>
    <fullName>Crates_measured_date__c</fullName>
    <label>Crates measured date</label>
    <type>Date</type>
</CustomField>