2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Crating__c.field-meta.xml
<CustomField>
    <fullName>Crating__c</fullName>
    <description>Specifications for Special Crating</description>
    <label>Crating</label>
    <type>TextArea</type>
</CustomField>