2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Crew_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Crew_Assigned__c</fullName>
    <label>Crew Assigned</label>
    <length>200</length>
    <type>Text</type>
</CustomField>