2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/CS_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_No__c</fullName>
    <defaultValue>$User.Phone</defaultValue>
    <label>CS Contact No.</label>
    <length>45</length>
    <type>Text</type>
</CustomField>