2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/DA_Email__c.field-meta.xml
<CustomField>
    <fullName>DA_Email__c</fullName>
    <label>D.A. Email</label>
    <type>Email</type>
</CustomField>