2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/DA_Fax__c.field-meta.xml
<CustomField>
    <fullName>DA_Fax__c</fullName>
    <label>D.A. Fax</label>
    <type>Phone</type>
</CustomField>