2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/DA_Tel__c.field-meta.xml
<CustomField>
    <fullName>DA_Tel__c</fullName>
    <label>D.A. Tel</label>
    <type>Phone</type>
</CustomField>