2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Delivery_Address_New__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_New__c</fullName>
    <label>Delivery Address New</label>
    <type>TextArea</type>
</CustomField>