2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details__c</fullName>
    <label>Delivery Address</label>
    <type>TextArea</type>
</CustomField>