2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destination</label>
    <type>Checkbox</type>
</CustomField>