2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Destination_Agent__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent__c</fullName>
    <label>Destination Agent</label>
    <type>TextArea</type>
</CustomField>