2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Destination_POE__c.field-meta.xml
<CustomField>
    <fullName>Destination_POE__c</fullName>
    <label>Destination POE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>