2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Direct_Load_FCL__c.field-meta.xml
<CustomField>
    <fullName>Direct_Load_FCL__c</fullName>
    <label>Direct Load FCL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 x 20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>1 x 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>1 x 40&apos; HC FCL</fullName>
            </value>
            <value>
                <fullName>1 x 20&apos; FCL + 1 x 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>1 x 20&apos; FCL + 1 x 40&apos;HC &apos; FCL</fullName>
            </value>
            <value>
                <fullName>1 x 40&apos; FCL + 1 x 40&apos; HC FCL</fullName>
            </value>
            <value>
                <fullName>2 x 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>2 x 40&apos; HC FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>