2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Disposal_Service_List_of_items__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Service_List_of_items__c</fullName>
    <label>Disposal Service - List of items</label>
    <type>TextArea</type>
</CustomField>