2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/DTP_Surface_Air__c.field-meta.xml
<CustomField>
    <fullName>DTP_Surface_Air__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DTP:Surface/Air</label>
    <type>Checkbox</type>
</CustomField>