2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Est_Volume_Sea__c.field-meta.xml
<CustomField>
    <fullName>Est_Volume_Sea__c</fullName>
    <description>Volume in cuft</description>
    <label>Est Volume (Sea)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>