2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Est_Weight_Air__c.field-meta.xml
<CustomField>
    <fullName>Est_Weight_Air__c</fullName>
    <label>Est Weight (Air)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>