2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Est_Wt_Vol__c.field-meta.xml
<CustomField>
    <fullName>Est_Wt_Vol__c</fullName>
    <label>Est Wt/Vol</label>
    <length>45</length>
    <type>Text</type>
</CustomField>