2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/ETA_Destination__c.field-meta.xml
<CustomField>
    <fullName>ETA_Destination__c</fullName>
    <label>ETA Destination</label>
    <type>Date</type>
</CustomField>