2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/ETA_Port__c.field-meta.xml
<CustomField>
    <fullName>ETA_Port__c</fullName>
    <label>ETA Port</label>
    <type>Date</type>
</CustomField>