2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/ETA_Port_text__c.field-meta.xml
<CustomField>
    <fullName>ETA_Port_text__c</fullName>
    <label>ETA Port</label>
    <length>45</length>
    <type>Text</type>
</CustomField>