2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/ETD_Singapore__c.field-meta.xml
<CustomField>
    <fullName>ETD_Singapore__c</fullName>
    <label>ETD Singapore</label>
    <type>Date</type>
</CustomField>