2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>