2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Fumigation__c.field-meta.xml
<CustomField>
    <fullName>Fumigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fumigation</label>
    <type>Checkbox</type>
</CustomField>