2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Goods_to_be_Shipped_on__c.field-meta.xml
<CustomField>
    <fullName>Goods_to_be_Shipped_on__c</fullName>
    <label>Goods to be Shipped on</label>
    <length>55</length>
    <type>Text</type>
</CustomField>