2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Handy_Man__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man__c</fullName>
    <label>Handy Man</label>
    <type>DateTime</type>
</CustomField>