2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Handy_ManB__c.field-meta.xml
<CustomField>
    <fullName>Handy_ManB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handy Man</label>
    <type>Checkbox</type>
</CustomField>