2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Handyman_Service__c.field-meta.xml
<CustomField>
    <fullName>Handyman_Service__c</fullName>
    <defaultValue>&quot;Vendor: &quot;&amp; BR() &amp;
&quot;Date of Service: dd/mm/yy&quot;&amp; BR() &amp;
&quot;Time of Service: hrs&quot;&amp; BR() &amp;
&quot;Scope of Service: &quot;&amp; BR() &amp;
&quot;a) Dismantle&quot;&amp; BR() &amp;
&quot;b) Patch wall holes&quot;&amp; BR() &amp;
&quot;c) Remove TV Bracket + Patch wall holes&quot;</defaultValue>
    <label>Handyman Service</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>