2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Hoisting__c.field-meta.xml
<CustomField>
    <fullName>Hoisting__c</fullName>
    <defaultValue>&quot;DIMs = x x inches&quot;&amp; BR() &amp; 
&quot;Weight = kg &quot;&amp; BR() &amp; 
&quot; &quot;&amp; BR() &amp; 
&quot;Vendor: &quot;&amp; BR() &amp; 
&quot;Date of Service: dd/mm/yy&quot;&amp; BR() &amp; 
&quot;Time of Service: hrs&quot;</defaultValue>
    <label>Hoisting</label>
    <type>TextArea</type>
</CustomField>