2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Instructions_to_CSE__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_CSE__c</fullName>
    <description>Instructions from Sales Person to CSE</description>
    <label>Instructions to CSE</label>
    <type>TextArea</type>
</CustomField>