2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Instructions_to_OPS__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_OPS__c</fullName>
    <description>Instructions from Sales Person to Operations</description>
    <label>Instructions to OPS</label>
    <type>TextArea</type>
</CustomField>