2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Instructions_to_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_Traffic__c</fullName>
    <description>Instructions from Sales Person to Traffic</description>
    <label>Instructions to Traffic</label>
    <type>TextArea</type>
</CustomField>