2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Insurance_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Instructions__c</fullName>
    <label>Insurance Instructions</label>
    <type>TextArea</type>
</CustomField>