2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Date__c</fullName>
    <label>Job Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>