2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <description>Job Number</description>
    <label>Job Reference</label>
    <length>16</length>
    <type>Text</type>
</CustomField>