2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERY</fullName>
            </value>
            <value>
                <fullName>PARTIAL PACKING REQUIRED ONLY</fullName>
            </value>
            <value>
                <fullName>STUFFING AT RESIDENCE</fullName>
            </value>
            <value>
                <fullName>STUFFING AT WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>UNSTUFFING AT WAREHOUSE INTO L/VANS</fullName>
            </value>
            <value>
                <fullName>COLLECTION &amp; DELIVERY ONLY (NO PACKING REQUIRED)</fullName>
            </value>
            <value>
                <fullName>PACKING AND DELIVERY ONLY (NO UNPACKING REQUIRED)</fullName>
            </value>
            <value>
                <fullName>DELIVERY ONLY NO UNPACKING REQUIRED</fullName>
            </value>
            <value>
                <fullName>IMPORT UNSTUFFING AND COMPLETE UNPACKING</fullName>
            </value>
            <value>
                <fullName>LOCAL TRANSFER</fullName>
            </value>
            <value>
                <fullName>RETRIEVAL FOR SHIPPER TO VIEW</fullName>
            </value>
            <value>
                <fullName>RETRIEVAL FOR DELIVERY AT A LATER DATE</fullName>
            </value>
            <value>
                <fullName>AIR IMPORT CLEARANCE</fullName>
            </value>
            <value>
                <fullName>SEA IMPORT CLEARANCE</fullName>
            </value>
            <value>
                <fullName>AIR EXPORT CLEARANCE</fullName>
            </value>
            <value>
                <fullName>SEA EXPORT CLEARANCE</fullName>
            </value>
            <value>
                <fullName>PREDELIVERY OF MATERIALS</fullName>
            </value>
            <value>
                <fullName>COLLECTION OF DEBRIS</fullName>
            </value>
            <value>
                <fullName>UNSTUFF FROM CONTAINER AT WHSE AND RE-DELIVERY TO RESIDENCE</fullName>
            </value>
            <value>
                <fullName>WAREHOUSE DUTIES</fullName>
            </value>
            <value>
                <fullName>ANNUAL LEAVE</fullName>
            </value>
            <value>
                <fullName>COLLECTION ONLY (NO PACKING REQUIRED)</fullName>
            </value>
            <value>
                <fullName>MEDICAL LEAVE</fullName>
            </value>
            <value>
                <fullName>ATTACHED TO ARTMOVE DEPT</fullName>
            </value>
            <value>
                <fullName>PREPACKING FOR LOCAL MOVE</fullName>
            </value>
            <value>
                <fullName>REMOVAL AND COMPLETE UNPACKING</fullName>
            </value>
            <value>
                <fullName>PACKING FOR WAREHOUSING SERVICES</fullName>
            </value>
            <value>
                <fullName>SEA EXPORT PACKING</fullName>
            </value>
            <value>
                <fullName>AIR EXPORT PACKING</fullName>
            </value>
            <value>
                <fullName>PRE-DELIVERY OF PACKING MATERIALS &amp; CRATING MEASUREMENTS TO BE TAKEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>