2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Labour_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Labour_Requirement__c</fullName>
    <description>Requirement for Labour for Operations</description>
    <label>Labour Requirement</label>
    <type>TextArea</type>
</CustomField>