2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Length_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Time__c</fullName>
    <label>Length of Time:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>