2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Lifttvan_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Lifttvan_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liftvan (Warehouse)</label>
    <type>Checkbox</type>
</CustomField>