2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Liftvan__c.field-meta.xml
<CustomField>
    <fullName>Liftvan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liftvan</label>
    <type>Checkbox</type>
</CustomField>