2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Liftvan_Residence__c.field-meta.xml
<CustomField>
    <fullName>Liftvan_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liftvan (Residence)</label>
    <type>Checkbox</type>
</CustomField>