2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Limousine__c.field-meta.xml
<CustomField>
    <fullName>Limousine__c</fullName>
    <label>Limousine</label>
    <type>DateTime</type>
</CustomField>