2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/LimousineB__c.field-meta.xml
<CustomField>
    <fullName>LimousineB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limousine</label>
    <type>Checkbox</type>
</CustomField>