2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Load_Type__c</fullName>
    <label>Load Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>