2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Load_Type_Air__c.field-meta.xml
<CustomField>
    <fullName>Load_Type_Air__c</fullName>
    <label>Load Type Air</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triwall</fullName>
                <default>true</default>
                <label>Triwall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>