2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Load_Type_Sea__c.field-meta.xml
<CustomField>
    <fullName>Load_Type_Sea__c</fullName>
    <label>Load Type Sea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liftvan</fullName>
            </value>
            <value>
                <fullName>Loose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>