2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Loading_At__c.field-meta.xml
<CustomField>
    <fullName>Loading_At__c</fullName>
    <label>Loading At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>