2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Long_Pull_Distance_m__c.field-meta.xml
<CustomField>
    <fullName>Long_Pull_Distance_m__c</fullName>
    <label>Long Pull Distance (m)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>