2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Loose_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Loose_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loose (Warehouse)</label>
    <type>Checkbox</type>
</CustomField>