2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Looseload__c.field-meta.xml
<CustomField>
    <fullName>Looseload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Looseload</label>
    <type>Checkbox</type>
</CustomField>