2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/MCST__c.field-meta.xml
<CustomField>
    <fullName>MCST__c</fullName>
    <description>MCST required ?</description>
    <label>MCST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>