2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Shipment Mode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>