2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Normal_Dry__c.field-meta.xml
<CustomField>
    <fullName>Normal_Dry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Normal Dry</label>
    <type>Checkbox</type>
</CustomField>