2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Normal_Origin__c.field-meta.xml
<CustomField>
    <fullName>Normal_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Normal (Origin)</label>
    <type>Checkbox</type>
</CustomField>