2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/On_About__c.field-meta.xml
<CustomField>
    <fullName>On_About__c</fullName>
    <label>On About</label>
    <type>Date</type>
</CustomField>