2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Operation_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Operation_Instruction__c</fullName>
    <defaultValue>&quot;ASSEMBLE DISMANTLED FURNITURE,&quot; &amp; BR() &amp;
&quot;REMOVE ALL DEBRIS FROM RESIDENCE,&quot; &amp; BR() &amp;
&quot;PHOTOS TO BE TAKEN FOR ALL DAMAGED ITEMS,&quot; &amp; BR() &amp;
&quot;ENSURE THAT ALL FORMS ARE SIGNED BY CLIENT.&quot;</defaultValue>
    <label>Operation Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>